--- a/index.html
+++ b/index.html
@@ -11,14 +11,27 @@
 </head>
 
 <body>
-  Equilibrium #3429
-
-  Our Equilibrium collection promotes balance and calm.
-
-  0.041 ETH
-  3 days left
-
-  Creation of Jules Wyvern
+  <main class="ntf-card">
+    <img src="images/image-equilibrium.jpg" alt="Shining cube standing on a glassy floor" class="equilibrium">
+    <div class="nft-info">
+      <h1 class="collection-name">Equilibrium #3429</h1>
+      <p class="description">Our Equilibrium collection promotes balance and calm.</p>
+      <div class="nft-details">
+        <div class="eth-value">
+          <img src="images/icon-ethereum.svg" alt="Symbol of ethernum" class="ethernum-ico">
+          <span class="eth-rate">0.041 ETH</span>
+        </div>
+        <div class="remaining-time">
+          <img src="images/icon-clock.svg" alt="Icon of the clock" class="clock-ico">
+          <span class="remaining-days">3 days left</span>
+        </div>
+      </div>
+    </div>
+    <div class="author">
+      <img src="images/image-avatar.png" alt="Face of the creator" class="avatar">
+      <span class="signature">Creation of <span>Jules Wyvern</span></span>
+    </div>
+  </main>
 </body>
 
 </html>
