--- a/index.html
+++ b/index.html
@@ -11,12 +11,15 @@
 </head>
 
 <body>
-  <main class="ntf-card">
-    <img src="images/image-equilibrium.jpg" alt="Shining cube standing on a glassy floor" class="equilibrium">
+  <main class="nft-card">
+    <div class="equil-img">
+      <img src="images/image-equilibrium.jpg" alt="Shining cube standing on a glassy floor" class="equilibrium">
+      <div class="overlay"><img src="images/icon-view.svg" alt="eye icon" class="view-ico"></div>
+    </div>
     <div class="nft-info">
       <h1 class="collection-name">Equilibrium #3429</h1>
       <p class="description">Our Equilibrium collection promotes balance and calm.</p>
-      <div class="nft-details">
+      <div class="nft-details clearFix">
         <div class="eth-value">
           <img src="images/icon-ethereum.svg" alt="Symbol of ethernum" class="ethernum-ico">
           <span class="eth-rate">0.041 ETH</span>
